# rwa

./: README.md  cline_mcp_settings.json
solana-rwa/programs/compliance-aggregator/: Cargo.toml
solana-rwa/programs/compliance-aggregator/src/: constants.rs  lib.rs
solana-rwa/programs/compliance-aggregator/src/errors/: mod.rs
solana-rwa/programs/compliance-aggregator/src/events/: mod.rs  module_added.rs  module_removed.rs  transfer_check.rs
solana-rwa/programs/compliance-aggregator/src/pdas/: mod.rs
solana-rwa/programs/compliance-aggregator/src/states/: aggregator_state.rs  mod.rs  query_types.rs  token_compliance.rs
solana-rwa/programs/compliance-aggregator/src/tests/: mod.rs
solana-rwa/programs/compliance-aggregator/src/tests/errors/: mod.rs
solana-rwa/programs/compliance-aggregator/src/tests/events/: mod.rs
solana-rwa/programs/compliance-aggregator/src/tests/pdas/: mod.rs
solana-rwa/programs/compliance-aggregator/src/tests/states/: mod.rs
solana-rwa/programs/compliance-aggregator/src/tests/transfer_checks/: mod.rs
solana-rwa/programs/identity-registry/: Cargo.toml
solana-rwa/programs/identity-registry/src/: constants.rs  lib.rs
solana-rwa/programs/identity-registry/src/errors/: mod.rs
solana-rwa/programs/identity-registry/src/events/: mod.rs  registration.rs  registration_with_data.rs  removal.rs  update.rs
solana-rwa/programs/identity-registry/src/pdas/: mod.rs
solana-rwa/programs/identity-registry/src/states/: identity_account.rs  mod.rs  registry_state.rs
solana-rwa/programs/identity-registry/src/tests/: mod.rs
web/: .gitignore  (+4 more)
(+228 files in other folders)
